<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background"
    >

    <include
        layout="@layout/header"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="200dp"
        android:layout_centerHorizontal="true"
        android:padding="10dp">

        <Button
            android:id="@+id/russian_button"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:layout_centerInParent="true"
            android:text="@string/russian"
            android:textSize="35dp"
            android:textColor="@color/white"
            android:fontFamily="@font/bad_crunge"
            android:layout_above="@+id/classic_button"
            android:background="@drawable/button_shape"
            />

        <TextView
            android:id="@+id/player_online_russian"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="ciao"
            android:textSize="20dp"
            android:textColor="@color/white"
            android:fontFamily="@font/bad_crunge"/>


        <Button
            android:id="@+id/classic_button"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:layout_centerInParent="true"
            android:text="@string/classic"
            android:textSize="35dp"
            android:textColor="@color/white"
            android:fontFamily="@font/bad_crunge"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_shape"/>

        <TextView
            android:id="@+id/player_online_classic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="ciao"
            android:textSize="20dp"
            android:textColor="#C7C7C7"
            android:fontFamily="@font/bad_crunge"
            />

        <Button
            android:id="@+id/standard_button"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:text="@string/standard"
            android:textSize="35dp"
            android:textColor="@color/white"
            android:fontFamily="@font/bad_crunge"
            android:layout_below="@+id/classic_button"
            android:background="@drawable/button_shape"/>

        <TextView
            android:id="@+id/player_online_standard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="ciao"
            android:textSize="20dp"
            android:textColor="#424242"
            android:fontFamily="@font/bad_crunge"/>

    </LinearLayout>


</RelativeLayout>