<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:andorid="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    >



    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context = ".activities.MainActivity"
        android:id="@+id/my_root"
        android:background="@drawable/background"

        >

        <!--Badge-->
        <include
            layout="@layout/header"
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="100dp"/>

        <FrameLayout

            android:id="@+id/anchor_point"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:layout_below="@+id/header"
            android:layout_above="@+id/buttons_menu">
        </FrameLayout>

        <!--Buttons Menu-->
        <LinearLayout
            android:id="@+id/buttons_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            android:alpha="0.85"
            >

            <RelativeLayout
                android:id="@+id/left_button"
                android:layout_weight="1"
                android:layout_gravity="bottom|left"
                android:layout_width="@dimen/menu_button_width"
                android:layout_height="@dimen/menu_button_height"
                android:background="@drawable/button_shape"
                android:onClick="showFragment"
                >

                <ImageView
                    android:id="@+id/left_image"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/menu"/>

                <TextView
                    android:id="@+id/left_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_below="@+id/left_image"
                    android:layout_centerHorizontal="true"
                    android:text="@string/settings"
                    android:textSize="20dp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/bad_crunge"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/central_button"
                android:layout_weight="2"
                android:layout_gravity="bottom|left"
                android:layout_width="@dimen/menu_button_width"
                android:layout_height="@dimen/menu_button_height"
                android:onClick="showFragment"
                android:background="@drawable/button_shape">

                <ImageView
                    android:id="@+id/central_image"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/helm"/>

                <TextView
                    android:id="@+id/central_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"


                    android:layout_below="@+id/central_image"
                    android:layout_centerHorizontal="true"

                    android:text="@string/home"
                    android:textSize="20dp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/bad_crunge"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/right_button"
                android:layout_weight="1"
                android:layout_gravity="bottom|left"
                android:layout_width="@dimen/menu_button_width"
                android:layout_height="@dimen/menu_button_height"
                android:onClick="showFragment"
                android:background="@drawable/button_shape">

                <ImageView
                    android:id="@+id/right_image"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/captain"/>

                <TextView
                    android:id="@+id/right_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/right_image"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"

                    android:text="@string/fleet"
                    android:textSize="20dp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/bad_crunge"/>
            </RelativeLayout>
        </LinearLayout>



    </RelativeLayout>

</layout>


